VideoPress: Fix z-index order at VideoCard

--- a/projects/packages/videopress/src/client/admin/components/video-card/style.module.scss
+++ b/projects/packages/videopress/src/client/admin/components/video-card/style.module.scss
@@ -75,18 +75,18 @@
 	&:hover {
 		.video-card__background {
 			opacity: 1;
-			z-index: 5;
+			z-index: 1;
 			top: calc( var( --spacing-base ) * -2 );
 			left: calc( var( --spacing-base ) * -2 );
 			padding: calc( var( --spacing-base ) * 2 );
 		}
 
 		.video-card__thumbnail {
-			z-index: 10;
+			z-index: 2;
 		}
 
 		.video-card__quick-actions-section {
-			z-index: 10;
+			z-index: 3;
 			opacity: 1;
 		}
 	}
@@ -121,7 +121,7 @@
 	white-space: nowrap;
 	overflow: hidden;
 	position: relative;
-	z-index: 10;
+	z-index: 2;
 }
 
 .video-card__video-plays-counter {
@@ -130,7 +130,7 @@
 	color: var( --jp-gray-50 );
 	white-space: nowrap;
 	position: relative;
-	z-index: 10;
+	z-index: 2;
 
 	> svg {
 		fill: var( --jp-gray-50 );
